# myBankOperations

./: Account.cpp  Account.h  CMakeLists.txt  Manager.cpp  Manager.h  MoneyTransfer.cpp  MoneyTransfer.h  main.cpp
test/: CMakeLists.txt  testAccounts.cpp  testManager.cpp
test/lib/googletest/include/gtest/: gtest.h
